made changes to Nav area to prevent overlapping and adjusted color

--- a/CSS.biosite.css
+++ b/CSS.biosite.css
@@ -7,15 +7,16 @@
             body, header, nav, main, footer, img, h1, h3, img, ul, aside, figure, figcaption  {
 				margin: 0;
 				padding: 0;
-				border: 0;
-				background-color: #f6eee4;
+				border: none;
+				background-color: #b36197;
 			}
 			
 			/* Style rules for body and images */
 			
 			img {
 				max-width: 100%;
-				display: block;
+				display: inline-block;
+                position: relative;
 			}
 			
 			
@@ -56,23 +57,31 @@
 				
 						
 			/* Style rules for header */
-	
-			header {
-				position: -webkit-sticky;
-				position: sticky;
-				top: 0;
+           
+            header {
+                position: relative; /* Changed header positioning */
+                z-index: 2; /* Set a higher z-index than the navigation */
 				background-color: #000;
 				height: 190px;
-	}
+        }
 	
 			header img {
 				margin: 0 auto;
 	}
 		/* Style rules for navigation area */
 			nav {
-				padding: 1%;
-				margin-bottom: 1%;
-	}
+                text-align: right;
+
+                position: absolute; /* Changed the positioning to absolute */
+                top: 0; /* adjusted the top position */
+                left: 0; /* adjusted the left position */
+                right: 0; /* Adjusted right position */
+                z-index: 1; /*Adjusted z-index to 1 */
+              }
+              .top-nav {
+                float: right;
+              }
+	
 	/* Style rules to show mobile class and hide tab-desk class */
 			.mobile,
 			.mobile-tablet {
@@ -81,22 +90,24 @@
 					
 			nav ul {
 				list-style-type: none; 
-				text-align: center;
-			}
+                margin-top: 0px; /* Added margin to separate links from header images */
+                text-align: right;
+            }
 			
 			nav li {
 				font-size: 1.5em;
+                display: inline-block; /* Changed display to list items horizontally */
+                margin-right: 10px; /* Adjusted the margin between list items */
 				font-family: Arial, Helvetica;
-				border-top: 1px solid #fff;
+				border-top: solid #34044b;
 
 			}
 			nav li a {
-				display: block;
-				color: #098ca3;
-				padding-top: 0.5em; 
-				padding-bottom: 0.5em;
-				padding-left: 2em;
-				padding-right: 2em;
+				color: #34044b;
+				padding: 0.2em 0.5em;
+                padding-left: 0.2em;
+                padding-right: 0.2em;
+                text-decoration: none;
 			}
 		
 		/* Show mobile class, hide tablet-desktop class */
@@ -235,7 +246,7 @@
 		/* Media Query for Large Desktop View ports */
 					@media screen and (min-width: 1921px) {
 						    body {
-                                background: linear-gradient(to bottom, #bb3ac7, #a560ac); /* added gradient and colors*/
+                                background: linear-gradient(to bottom, #47064d, #a560ac); /* added gradient and colors*/
                              }
                               
 							#wrapper {
@@ -339,26 +350,24 @@
 								display: none;
 							}
 							
-		/* Desktop Viewport: Style Rules for Nav Area */
-					nav {
-						position: absolute; 
-						top: 20px; 
-						left: 20px; 
-						background-color: #2a1f14; 
-						padding: 10px;
-					}
+                    /* Desktop Viewport: Style Rules for Nav Area */
+                   
+                    .top-nav {
+                        float: right;
+                      }
+                                
 					.nav li {
 							font-size: 1.5em;
 						}
-					.nav lia a {
+					.nav li a  {
 							padding-top: 0.5em;
 							padding-bottom: 0.5em;
-							padding-left: 1.5em;
-							padding-right: 1.5em;
+							padding-left: 0.2em;
+							padding-right: 0.2em;
 							
 						}
 
-					nav li a:hover {
+					.nav li a:hover {
 							color:#2a1f14;
 							background-color: #f6eee4;
 						}
